--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "homepage": "https://github.com/omar-yusuf-onalan/PCAT#readme",
   "devDependencies": {
     "nodemon": "^2.0.20",
-    "prettier": "2.7.1"
+    "prettier": "^2.7.1"
   },
   "dependencies": {
     "ejs": "^3.1.8",
