--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   "homepage": "https://github.com/omar-yusuf-onalan/PCAT#readme",
   "devDependencies": {
     "nodemon": "^2.0.20",
-    "prettier": "^2.7.1"
+    "prettier": "2.7.1"
   },
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.6.7"
   }
 }
