--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "pcat",
-  "version": "1.0.0",
-  "description": "PCAT Photo App",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/omar-yusuf-onalan/PCAT.git"
-  },
-  "keywords": [
-    "camera",
-    "photo"
-  ],
-  "author": "Omar Yusuf Onalan",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/omar-yusuf-onalan/PCAT/issues"
-  },
-  "homepage": "https://github.com/omar-yusuf-onalan/PCAT#readme",
-  "devDependencies": {
-    "nodemon": "^2.0.20",
-    "prettier": "2.7.1"
-  },
-  "dependencies": {
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "mongoose": "^6.6.7"
-  }
+    "name": "pcat",
+    "version": "1.0.0",
+    "description": "PCAT Photo App",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon app.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/omar-yusuf-onalan/PCAT.git"
+    },
+    "keywords": [
+        "camera",
+        "photo"
+    ],
+    "author": "Omar Yusuf Onalan",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/omar-yusuf-onalan/PCAT/issues"
+    },
+    "homepage": "https://github.com/omar-yusuf-onalan/PCAT#readme",
+    "devDependencies": {
+        "nodemon": "^2.0.20",
+        "prettier": "2.7.1"
+    },
+    "dependencies": {
+        "ejs": "^3.1.8",
+        "express": "^4.18.2",
+        "express-fileupload": "^1.4.0",
+        "mongoose": "^6.6.7"
+    }
 }
